--- a/programming-hero/counter-app/src/App.css
+++ b/programming-hero/counter-app/src/App.css
@@ -34,7 +34,10 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 1.5em;
+  border: 1px solid lime;
+  border-radius: 20px;
+  margin: 1em;
 }
 
 .read-the-docs {
