--- a/programming-hero/pricing/src/App.css
+++ b/programming-hero/pricing/src/App.css
@@ -1,14 +1,8 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
 }
